# edgebar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
crates/menu-util/: Cargo.toml
crates/menu-util/src/: menu.rs
crates/shell-util/: Cargo.toml
crates/shell-util/src/: shell.rs
crates/systray-util/: Cargo.toml  README.md
crates/systray-util/src/: systray.rs  tray_spy.rs  util.rs
crates/window-util/: Cargo.toml
crates/window-util/src/: window.rs
examples_src/macos/: index.html  jsx-runtime.d.ts  macos.edgebar.json  package-lock.json  package.json  tsconfig.json  vite.config.js
examples_src/macos/src/: index.css  index.tsx
examples_src/macos/src/applications/: FileExplorer.ts  MozillaFirefox.ts  SublimeText.ts  Terminal.ts  VisualStudioCode.ts  Windows.ts
resources/: menu-schema.json  widget-schema.json
