[package]
name = "menu-util"
version = "0.0.1"
authors = ["Kris Henriksen"]
description = "A library for Windows 11 for creating dropdown menus."
license = "MIT"
repository = "https://github.com/krishenriksen/edgebar"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tauri = "2.5.1"
tokio = { workspace = true }
windows = { workspace = true }
