[package]
name = "window-util"
version = "0.0.1"
authors = ["Kris Henriksen"]
description = "A library for interacting with Windows windows on Windows 10 and 11."
license = "MIT"
repository = "https://github.com/krishenriksen/edgebar"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
once_cell = "1.21.3"
windows-core = { workspace = true }
windows = { workspace = true }
